@@ -30,20 +30,23 @@ import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Locale;
+import java.util.Properties;
 import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
-import org.apache.solr.SolrJettyTestBase;
-import org.apache.solr.client.solrj.ResponseParser;
-import org.apache.solr.client.solrj.SolrClient;
-import org.apache.solr.client.solrj.SolrQuery;
+import org.apache.solr.SolrTestCaseJ4;
+import org.apache.solr.client.solrj.RemoteSolrException;
 import org.apache.solr.client.solrj.SolrRequest;
 import org.apache.solr.client.solrj.SolrServerException;
 import org.apache.solr.client.solrj.request.QueryRequest;
+import org.apache.solr.client.solrj.request.SolrQuery;
 import org.apache.solr.client.solrj.request.UpdateRequest;
+import org.apache.solr.client.solrj.response.InputStreamResponseParser;
 import org.apache.solr.client.solrj.response.QueryResponse;
+import org.apache.solr.client.solrj.response.ResponseParser;
+import org.apache.solr.client.solrj.response.XMLResponseParser;
 import org.apache.solr.common.SolrDocumentList;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
@@ -51,12 +54,20 @@ import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.MapSolrParams;
 import org.apache.solr.common.util.NamedList;
 import org.apache.solr.embedded.JettyConfig;
+import org.apache.solr.util.ServletFixtures.DebugServlet;
+import org.apache.solr.util.ServletFixtures.RedirectServlet;
+import org.apache.solr.util.ServletFixtures.SlowServlet;
+import org.apache.solr.util.ServletFixtures.SlowStreamServlet;
+import org.apache.solr.util.SolrJettyTestRule;
 import org.eclipse.jetty.ee10.servlet.ServletHolder;
 import org.junit.BeforeClass;
+import org.junit.ClassRule;
 
-public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
+public abstract class HttpSolrClientTestBase extends SolrTestCaseJ4 {
 
-  protected static final String DEFAULT_CORE = "foo";
+  @ClassRule public static SolrJettyTestRule solrTestRule = new SolrJettyTestRule();
+
+  protected static final String DEFAULT_COLLECTION = DEFAULT_TEST_CORENAME;
   protected static final String SLOW_SERVLET_PATH = "/slow";
   protected static final String SLOW_SERVLET_REGEX = SLOW_SERVLET_PATH + "/*";
   protected static final String DEBUG_SERVLET_PATH = "/debug";
@@ -73,24 +84,17 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
   public static void beforeTest() throws Exception {
     JettyConfig jettyConfig =
         JettyConfig.builder()
-            .withServlet(
-                new ServletHolder(BasicHttpSolrClientTest.RedirectServlet.class),
-                REDIRECT_SERVLET_REGEX)
-            .withServlet(
-                new ServletHolder(BasicHttpSolrClientTest.SlowServlet.class), SLOW_SERVLET_REGEX)
+            .withServlet(new ServletHolder(RedirectServlet.class), REDIRECT_SERVLET_REGEX)
+            .withServlet(new ServletHolder(SlowServlet.class), SLOW_SERVLET_REGEX)
             .withServlet(new ServletHolder(DebugServlet.class), DEBUG_SERVLET_REGEX)
-            .withServlet(
-                new ServletHolder(BasicHttpSolrClientTest.SlowStreamServlet.class),
-                SLOW_STREAM_SERVLET_REGEX)
+            .withServlet(new ServletHolder(SlowStreamServlet.class), SLOW_STREAM_SERVLET_REGEX)
             .withSSLConfig(sslConfig.buildServerSSLConfig())
             .build();
-    createAndStartJetty(legacyExampleCollection1SolrHome(), jettyConfig);
+    solrTestRule.startSolr(legacyExampleCollection1SolrHome(), new Properties(), jettyConfig);
   }
 
   @Override
   public void tearDown() throws Exception {
-    System.clearProperty("solr.security.auth.basicauth.credentials");
-    System.clearProperty(HttpClientUtil.SYS_PROP_HTTP_CLIENT_BUILDER_FACTORY);
     DebugServlet.clear();
     super.tearDown();
   }
@@ -229,22 +233,22 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
     Collection<String> ids = Collections.singletonList("a");
     try {
       client.getById("a");
-    } catch (SolrClient.RemoteSolrException ignored) {
+    } catch (RemoteSolrException ignored) {
     }
 
     try {
       client.getById(ids, null);
-    } catch (SolrClient.RemoteSolrException ignored) {
+    } catch (RemoteSolrException ignored) {
     }
 
     try {
       client.getById("foo", "a");
-    } catch (SolrClient.RemoteSolrException ignored) {
+    } catch (RemoteSolrException ignored) {
     }
 
     try {
       client.getById("foo", ids, null);
-    } catch (SolrClient.RemoteSolrException ignored) {
+    } catch (RemoteSolrException ignored) {
     }
   }
 
@@ -274,7 +278,7 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
   protected enum WT {
     JAVABIN,
     XML
-  };
+  }
 
   protected void testUpdate(HttpSolrClientBase client, WT wt, String contentType, String docIdValue)
       throws Exception {
@@ -291,7 +295,7 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
 
     try {
       client.request(req);
-    } catch (SolrClient.RemoteSolrException ignored) {
+    } catch (RemoteSolrException ignored) {
     }
 
     assertEquals("post", DebugServlet.lastMethod);
@@ -321,13 +325,13 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
     try {
       SolrInputDocument doc = new SolrInputDocument();
       doc.addField("id", "collection");
-      baseUrlClient.add(COLLECTION_1, doc);
-      baseUrlClient.commit(COLLECTION_1);
+      baseUrlClient.add(DEFAULT_COLLECTION, doc);
+      baseUrlClient.commit(DEFAULT_COLLECTION);
 
       assertEquals(
           1,
           baseUrlClient
-              .query(COLLECTION_1, new SolrQuery("id:collection"))
+              .query(DEFAULT_COLLECTION, new SolrQuery("id:collection"))
               .getResults()
               .getNumFound());
 
@@ -348,8 +352,7 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
     }
   }
 
-  protected void verifyServletState(HttpSolrClientBase client, SolrRequest<?> request)
-      throws Exception {
+  protected void verifyServletState(HttpSolrClientBase client, SolrRequest<?> request) {
     // check query String
     Iterator<String> paramNames = request.getParams().getParameterNamesIterator();
     while (paramNames.hasNext()) {
@@ -363,7 +366,7 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
           assertEquals(
               shouldBeInQueryString,
               DebugServlet.queryString.contains(
-                  name + "=" + URLEncoder.encode(value, StandardCharsets.UTF_8.name())));
+                  name + "=" + URLEncoder.encode(value, StandardCharsets.UTF_8)));
           // in either case, it should be in the parameters
           assertNotNull(DebugServlet.parameters.get(name));
           assertEquals(1, DebugServlet.parameters.get(name).length);
@@ -374,12 +377,12 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
   }
 
   protected void testQueryString() throws Exception {
-    final String clientUrl = getBaseUrl() + DEBUG_SERVLET_PATH;
+    final String clientUrl = solrTestRule.getBaseUrl() + DEBUG_SERVLET_PATH;
     UpdateRequest req = new UpdateRequest();
 
     try (HttpSolrClientBase client =
         builder(clientUrl, DEFAULT_CONNECTION_TIMEOUT, DEFAULT_CONNECTION_TIMEOUT)
-            .withDefaultCollection(DEFAULT_CORE)
+            .withDefaultCollection(DEFAULT_COLLECTION)
             .withTheseParamNamesInTheUrl(Set.of("serverOnly"))
             .build()) {
       // test without request query params
@@ -388,7 +391,7 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
 
       try {
         client.request(req);
-      } catch (SolrClient.RemoteSolrException ignored) {
+      } catch (RemoteSolrException ignored) {
       }
       verifyServletState(client, req);
 
@@ -404,7 +407,7 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
       setReqParamsOf(req, "requestOnly", "notRequest");
       try {
         client.request(req);
-      } catch (SolrClient.RemoteSolrException ignored) {
+      } catch (RemoteSolrException ignored) {
       }
       verifyServletState(client, req);
 
@@ -420,7 +423,7 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
       setReqParamsOf(req, "serverOnly", "requestOnly", "both", "neither");
       try {
         client.request(req);
-      } catch (SolrClient.RemoteSolrException ignored) {
+      } catch (RemoteSolrException ignored) {
       }
       verifyServletState(client, req);
     }
@@ -437,7 +440,7 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
       setReqParamsOf(req, "serverOnly", "requestOnly", "both", "neither");
       try {
         client.request(req);
-      } catch (SolrClient.RemoteSolrException ignored) {
+      } catch (RemoteSolrException ignored) {
       }
       // NOTE: single stream requests send all the params
       // as part of the query string.  So add "neither" to the request,
@@ -554,7 +557,7 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
 
   protected void testUpdateAsync() throws Exception {
     ResponseParser rp = new XMLResponseParser();
-    String url = getBaseUrl();
+    String url = solrTestRule.getBaseUrl();
     HttpSolrClientBuilderBase<?, ?> b =
         builder(url, DEFAULT_CONNECTION_TIMEOUT, DEFAULT_CONNECTION_TIMEOUT).withResponseParser(rp);
     int limit = 10;
@@ -563,11 +566,11 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
     try (HttpSolrClientBase client = b.build()) {
 
       // ensure the collection is empty to start
-      client.deleteByQuery(COLLECTION_1, "*:*");
-      client.commit(COLLECTION_1);
+      client.deleteByQuery(DEFAULT_COLLECTION, "*:*");
+      client.commit(DEFAULT_COLLECTION);
       QueryResponse qr =
           client.query(
-              COLLECTION_1,
+              DEFAULT_COLLECTION,
               new MapSolrParams(Collections.singletonMap("q", "*:*")),
               SolrRequest.METHOD.POST);
       assertEquals(0, qr.getResults().getNumFound());
@@ -577,22 +580,22 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
         ur.add("id", "KEY-" + i);
         ur.setMethod(SolrRequest.METHOD.POST);
 
-        client.requestAsync(ur, COLLECTION_1).whenComplete((nl, e) -> latch.countDown());
+        client.requestAsync(ur, DEFAULT_COLLECTION).whenComplete((nl, e) -> latch.countDown());
       }
       latch.await(1, TimeUnit.MINUTES);
-      client.commit(COLLECTION_1);
+      client.commit(DEFAULT_COLLECTION);
 
       // check that the correct number of documents were added
       qr =
           client.query(
-              COLLECTION_1,
+              DEFAULT_COLLECTION,
               new MapSolrParams(Collections.singletonMap("q", "*:*")),
               SolrRequest.METHOD.POST);
       assertEquals(limit, qr.getResults().getNumFound());
 
       // clean up
-      client.deleteByQuery(COLLECTION_1, "*:*");
-      client.commit(COLLECTION_1);
+      client.deleteByQuery(DEFAULT_COLLECTION, "*:*");
+      client.commit(DEFAULT_COLLECTION);
     }
   }
 
@@ -634,13 +637,13 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
     ResponseParser rp = new XMLResponseParser();
     DebugServlet.clear();
     DebugServlet.addResponseHeader("Content-Type", "Wrong Content Type!");
-    String url = getBaseUrl() + DEBUG_SERVLET_PATH;
+    String url = solrTestRule.getBaseUrl() + DEBUG_SERVLET_PATH;
     HttpSolrClientBuilderBase<?, ?> b =
         builder(url, DEFAULT_CONNECTION_TIMEOUT, DEFAULT_CONNECTION_TIMEOUT).withResponseParser(rp);
 
     try (HttpSolrClientBase client = b.build()) {
       QueryRequest query = new QueryRequest(new MapSolrParams(Collections.singletonMap("id", "1")));
-      CompletableFuture<NamedList<Object>> future = client.requestAsync(query, COLLECTION_1);
+      CompletableFuture<NamedList<Object>> future = client.requestAsync(query, DEFAULT_COLLECTION);
       ExecutionException ee = null;
       try {
         future.get(1, TimeUnit.MINUTES);
@@ -649,7 +652,7 @@ public abstract class HttpSolrClientTestBase extends SolrJettyTestBase {
         ee = ee1;
       }
       assertTrue(future.isCompletedExceptionally());
-      assertTrue(ee.getCause() instanceof SolrClient.RemoteSolrException);
+      assertTrue(ee.getCause() instanceof RemoteSolrException);
       assertTrue(ee.getMessage(), ee.getMessage().contains("mime type"));
     }
   }
